syntax = "proto3";

package account.v1;

option go_package = "task-tracker/gen/account;accountpb";

message RegisterRequest {
  string email = 1;
  string password = 2;
  string repeat_password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string jwt = 1;
}

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
}
